The full slidify

--- a/streakiness/shinyapp/index.html
+++ b/streakiness/shinyapp/index.html
@@ -74,7 +74,8 @@ Simply select a year from the drop down box and four charts are created, giving 
   <h3>Streak Analyzers</h3>
   <p>Some years, teams are streakier than other years, they tend to have long stretches of winning and losing as opposed to more consistency. One way to see how <em>streaky</em> a team is during a season is to look at the length of streaks throughout the season, both as the season progresses, as in the first chart and as a distribution, as in the second chart. These charts give a quick overview of this (removing the most common case of streaks of length 1).</p>
 
-<pre><code>## stat_bin: binwidth defaulted to range/30. Use &#39;binwidth = x&#39; to adjust this.
+<pre><code>## Loading required package: grid
+## stat_bin: binwidth defaulted to range/30. Use &#39;binwidth = x&#39; to adjust this.
 </code></pre>
 
 <p><img src="assets/fig/unnamed-chunk-3.png" alt="plot of chunk unnamed-chunk-3"> </p>
